bk_ida/gccida/g2/expand_nl_handler_label
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_nl_handler_label/src/stmt.c:4004:36: error: use of undeclared identifier 'machine_mode'
v4 = gen_rtx_fmt_u00( LABEL_REF, ( machine_mode)( ( ( BYTE3( target_flags) & 2) != 0) + 4), v3); 
                                   ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_nl_handler_label/src/obj/stmt.o] Error 1
